Don't build ps file

--- a/UiaComWrapper/UIAComWrapper.csproj
+++ b/UiaComWrapper/UIAComWrapper.csproj
@@ -140,9 +140,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="install.ps1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="install.ps1" />
     <None Include="UIAComWrapper.nuspec" />
     <None Include="UIAComWrapper.snk" />
   </ItemGroup>
